# house-atuo-mamager

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  property-workflow-config.yaml  pyproject.toml  requirements.txt
docs/: APLUS_UNATTENDED.md  BEIKE_APLUS_DESKTOP_CAPTURE.md  CONTINUATION_NOTES_20260425.md  OPENCLAW_INTEGRATION.md  后续落地实施计划.md
property_workflow/: __init__.py  config.py  models.py
property_workflow/analysis/: __init__.py  hotspot.py
property_workflow/cleaning/: __init__.py  cleaner.py
property_workflow/collectors/: __init__.py  anjuke.py  aplus_desktop.py  aplus_endpoint_discovery.py  aplus_probe.py  base.py  beike.py  factory.py  lianjia.py  synthetic.py
property_workflow/content/: __init__.py  copywriter.py  video_generator.py
property_workflow/integrations/openclaw/: __init__.py  task_runner.py
property_workflow/orchestration/: pipeline.py
property_workflow/publishing/: __init__.py  base.py  engine.py  mock_publishers.py
scripts/: aplus_bootstrap_collect.py  aplus_cdp_capture.js  aplus_endpoint_finder.py  aplus_live_api_scan.py  aplus_qr_login_server.py  aplus_session_token_extract.py  aplus_ticket_exchange.py  aplus_unattended_daemon.py  run_aplus_cdp_capture.ps1  run_aplus_unattended.ps1  run_full.ps1
tests/: test_beike_aplus_desktop.py  test_pipeline.py  test_publish_pipeline.py  test_video_pipeline.py
