[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "property-workflow"
version = "0.1.0"
description = "OpenClaw property unattended workflow scaffold"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["property_workflow*"]

